--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 /* tags padrões */
-b {
+b{
     color:red;
-    font-size: small;
+    font-size: small;   
     
 }
 h5 {
@@ -18,25 +18,33 @@ header {
     background-color: yellow;
 }
 body{
-    margin:0px 0px 0px 0px;
+    margin:0px 2px 0px 0px;
     width: 100%;
     height: auto;
+    overflow-x: hidden;
 }
 /* slides promotions */
 .slide{
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
     margin:2px;
     padding: 40px 8px 40px 8px;
     width: 100%;
     height: 255px;
     background-color:blue;
 }
+.slide-img{
+    width: 20%;
+    height: 40%;
+}
 
 /* content payment */
 .container-pay {
-    width: 854px;
+    width: 100%;
     height: 90px;
-    margin:6px;
-    padding: 40px 8px 40px 8px;
+    margin:8px;
+    padding: 40px 0px 40px 0px;
     background-color: brown;
     display:flex;
     justify-content: space-around;
@@ -44,12 +52,12 @@ body{
 }
 .box-pay {
     
-    width: auto;
-    height: auto;
-    margin: 5px;
+    width: 100%;
+    height: 100%;
+    margin: 10px;
 }
 .box-pay-img {
-    width: 25px;
+    width: 25%;
     height: 25px;
 }
 /* content recomendations */
