--- a/templates/header.html
+++ b/templates/header.html
@@ -1,17 +1,20 @@
 <header>
-    <div>
-        <img height="87px" src="https://cdn-icons-png.flaticon.com/128/493/493881.png">
-    </div>
+    <div class="barraSuperior">
+        <div class="logotipoImg">
+            <img class="logotipo" src="https://cdn-icons-png.flaticon.com/128/493/493881.png">
+        </div>
 
-    <div>
-        <img width="48px" height="50px"
-            src="https://cdn.iconscout.com/icon/premium/png-256-thumb/search-1416159-1196487.png">
-        <input width="562px" height="48px" type="text" placeholder="Buscar">
+        <div class="searchBar">
+            <img class="searchImg"
+                src="https://cdn.iconscout.com/icon/premium/png-256-thumb/search-1416159-1196487.png">
+            <input class="searchInput" type="text" placeholder="Buscar">
 
+        </div>
+        <nav>
+        </nav>
+        <a>
+        </a>
     </div>
-    <label>
-    </label>
-    <a>
-    </a>
-    {{site}}
+    <div class="barraLocation">
+    </div>
 </header>
