--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,54 @@ h5 {
     color:rgb(111, 214, 9);
     font-weight: bolder;
 }
+/* header */
+.barraSuperior{
+    display: flex;
+    flex-direction: row;
+    height: 48px;
+}
+.barraLocation{
+    border-style: solid None none None;
+    border-top:1px solid gray;
+    display: flex;
+    flex-direction: row;
+    height: 39px;
+
+}
+.logotipo{
+    border-style: solid;
+    border-radius: 40%;
+    display: flex;
+    justify-content: flex-start;
+    position:sticky;
+    top:0%;
+    left:0%;
+}
+.logotipoImg{
+    display: flex;
+    justify-content: flex-start;
+    position:sticky;
+    top:0%;
+    left:0%;
+}
+.searchBar{
+    height: auto;
+    width: 540px;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.searchInput{
+    height: 30px;
+    width: 500px;
+    border:None;
+}
+.searchImg {
+    background-color:white; 
+    height:30px;
+    width:20px;
+}
 header {
     position: sticky;
     top:0%;
@@ -17,7 +65,7 @@ header {
     padding:0px;
     background-color: yellow;
     display:flex;
-    justify-content: left;
+    flex-direction: column;
 }
 body{
     margin:0px 2px 0px 0px;
